--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
+body {
+  background: #e0f8e1;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
+  background-repeat: no-repeat;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.mainparent {
+  width: 500px;
+  background: white;
+  margin-top: 5rem;
+  padding: 2rem;
+}
+.result {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  line-height: 3rem;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row-reverse;
+  font-size: 3rem;
+  font-weight: bolder;
+  box-shadow: -1px 2px 5px;
+}
+.items {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: auto;
+  grid-template-areas:
+    "OFF OFF OFF OFF"
+    "clear clean divide multi"
+    "seven eight nine  minus"
+    "four five six add"
+    "three two one zero"
+    "ans ans ans ans";
+}
+.items > * {
+  /* width: 80px; */
+  height: 80px;
+  font-size: 48px;
+  box-shadow: -1px 2px 5px;
+}
+.clear {
+  grid-area: clear;
+  background: white;
+}
+.clean {
+  grid-area: clean;
+}
+.divied {
+  grid-area: divide;
+}
+.multi {
+  grid-area: multi;
+}
+.eight {
+  grid-area: eight;
+}
+.nine {
+  grid-area: nine;
+}
+.zero {
+  grid-area: zero;
+}
+.minus {
+  grid-area: minus;
+}
+.four {
+  grid-area: four;
+}
+.seven {
+  grid-area: seven;
+}
+.five {
+  grid-area: five;
+}
+.six {
+  grid-area: six;
+}
+.add {
+  grid-area: add;
+}
+.three {
+  grid-area: three;
+}
+.two {
+  grid-area: two;
+}
+.one {
+  grid-area: one;
+}
+.ans {
+  grid-area: ans;
+}
+.OFF {
+  grid-area: OFF;
 }
 
-.App-link {
-  color: #61dafb;
+.off {
+  background: #000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error {
+  background: red;
 }
